2009-03-25  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/wish.1            bring doc and demos in line with http://wiki.tcl.tk/812
	* library/demos/hello
	* library/demos/rmt
	* library/demos/square
	* library/demos/tcolor
	* library/demos/timer
	* library/demos/widget
	* win/tkWinMenu.c       Eliminate a few compiler warnings on mingw
	* win/ttkWinXPTheme.c   spacing

2009-03-25  Donal K. Fellows  <dkf@users.sf.net>

	* generic/ttk/ttkTheme.c (BuildOptionMap, NewElementClass):
	[Bug 2178820]: Ensure that zero-size allocations don't happen; some
	malloc implementations don't like it at all.

	* win/wish.exe.manifest.in: [Bug 1871101]: Add magic to make Tk not be
	blurred on Vista with large fonts.

2009-03-14  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tk.pc.in (new file):		[Patch 2243962] (hat0)
	* unix/configure.in, unix/Makefile.in: Added support for reporting
	Tk's public build configuration via the pkg-config system. TEA is
	still the official mechanism though, in part because pkg-config is not
	universally supported across all Tk's supported platforms.

2009-03-10  Donal K. Fellows  <dkf@users.sf.net>

	* doc/event.n: Tidy up and improve examples.

2009-03-09  Benjamin Riefenstahl  <b.riefenstahl@turtle-trading.net>

	* tkMacOSXFont.c (GetFontFamilyName): [Bug 2548661]: Handle NULL
	return from CFStringCreate.

2009-02-27  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/GetBitmap.3     [Feature Request 2636558]: Tk_DefineBitmap
	* generic/tk.decls    and Tk_GetBitmapFromData signature problem
	* generic/tkInt.decls
	* generic/tkBitmap.c
	* generic/tkInt.h
	* generic/tkStubInit.c
	* generic/tkDecls.h:    (regenerated)
	* generic/tkIntDecls.h: (regenerated)
	* macosx/tkMacOSXBitmap.c

2009-02-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkWindow.c: [Bug 2645457]: Check for dead windows after
	calling Tk_MakeWindowExist to avoid a crash when mapping dead windows.

2009-02-23  Pat Thoyts  <patthoyts@users.sourceforge.net>
